--- a/src/components/UI/Header/SideBar/styles.module.scss
+++ b/src/components/UI/Header/SideBar/styles.module.scss
@@ -1,29 +1,15 @@
-.menuBtn {
-    img {
-        height: 1.5rem;
-    }
-}
-
 .sidebar {
     width: 280px;
     min-height: 100vh;
     box-shadow: 0px 4px 8px rgb(0 0 0 / 16%);
     background-color: #000;
     position: fixed;
-    top: 0;
+    top: 60px;
     right: -100%;
     z-index: 1;
     transition: 0.5s;
 
-    .menuClose {
-        position: absolute;
-        top: 0.5rem;
-        right: 0;
-    
-        img {
-            height: 1rem;
-        }
-    }
+
 
     .modalBody {
         ul {
