--- a/src/components/UI/Avatar/styles.module.scss
+++ b/src/components/UI/Avatar/styles.module.scss
@@ -1,7 +1,7 @@
 .avatarFrame {
-    max-width: 100px;
-    max-height: 100px;
-    border: 2px solid #ff0653;
+    max-width: 185px;
+    max-height: 185px;
+    border: 2px solid #de004e;
     border-radius: 0.5rem;
 
     img {
