Feat: Skills section

--- a/src/components/UI/Header/styles.module.scss
+++ b/src/components/UI/Header/styles.module.scss
@@ -9,7 +9,7 @@
 
     .logo {
         div {
-            color: #860029;
+            color: #de004e;
             font-size: 1.5rem;
         }
     }
