--- a/src/components/UI/Header/SideBar/styles.module.scss
+++ b/src/components/UI/Header/SideBar/styles.module.scss
@@ -1,15 +1,15 @@
 .sidebar {
     width: 280px;
     min-height: 100vh;
-    box-shadow: 0px 4px 8px rgb(0 0 0 / 16%);
-    background-color: #000;
     position: fixed;
     top: 60px;
     right: -100%;
-    z-index: 1;
+    background-color: #000000b5;
+    box-shadow: 0px 4px 8px rgb(0 0 0 / 16%);
     transition: 0.5s;
-
-
+    z-index: 1;
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
 
     .modalBody {
         ul {
@@ -23,8 +23,6 @@
             }
         }
     }
-
-
 }
 
 .sidebarActive {
