Feat: Store projects 1/2

--- a/src/components/Sections/Skills/styles.module.scss
+++ b/src/components/Sections/Skills/styles.module.scss
@@ -8,5 +8,9 @@
     .skillsSwiper {
         color: #de004e;
         font-weight: 700;
+
+        img {
+            height: 2rem;
+        }
     }
 }
