--- a/src/components/Sections/Skills/styles.module.scss
+++ b/src/components/Sections/Skills/styles.module.scss
@@ -2,7 +2,26 @@
     background: #000;
 
     h3 {
-        color: #ffffffdf;
+        color: #fff;
+
+        &::before {
+            content: "";
+            width: 25%;
+            position: relative;
+            display: block;
+            top: 1rem;
+            border-top: 1px solid #de004e;
+        }
+
+        &::after {
+            content: "";
+            width: 25%;
+            position: absolute;
+            right: 0;
+            display: block;
+            border-top: 1px solid #de004e;
+            transform: translateY(-13px);
+        }
     }
 
     .skillsSwiper {
