Update: Projects section

--- a/src/components/Sections/Projects/Stores/styles.module.scss
+++ b/src/components/Sections/Projects/Stores/styles.module.scss
@@ -23,6 +23,10 @@
             font-size: 0.75rem;
             color: #ccc;
         }
+        .storeTools{
+            font-size: 0.625rem;
+            color: #ccc;
+        }
         .storeLink{
             font-weight: 600;
             color: #de004e;
