--- a/src/components/UI/Header/styles.module.scss
+++ b/src/components/UI/Header/styles.module.scss
@@ -1,7 +1,12 @@
 .header {
+    width: 100%;
+    top: 0;
+    position: fixed;
     background: #000;
     color: #fff;
     overflow: hidden;
+    box-shadow: 0px -15px 20px 0px #de004e;
+    z-index: 99;
 
     a {
         color: #ffffffd4;
