--- a/src/components/Sections/Projects/Stores/styles.module.scss
+++ b/src/components/Sections/Projects/Stores/styles.module.scss
@@ -7,10 +7,6 @@
     background: #ffffff12;
     border-radius: 0.5rem;
 
-    @media (min-width: 1200px) {
-        min-height: 350px;
-    }
-
     .itemImageContainer {
         display: flex;
         align-items: center;
@@ -26,6 +22,7 @@
         justify-content: flex-end;
 
         .storeName {
+            height: 2rem;
             font-size: 0.875rem;
             color: #fff;
         }
